--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Conexion a MySQL
 
-spring.datasource.url=jdbc://localhost>3306/RecursosHDB?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/RecursosHDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=RootKinal20224$
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -11,4 +11,4 @@ spring.main.allow-circular-references=true
 
 #configuracion del puerto
 
-server.port=8085
+server.port=8087
