--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/RecursosHDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=RootKinal20224$
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=RootKinal2024$
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
